[package]
name = "soft-edge"
version = "0.1.0"
edition = "2021"
authors = ["Shea 'Decibel' Leffler <shea@errno.com>"]

[dependencies]
arrayvec = "0.7.2"
bitvec = "0.22.3"
nalgebra = "0.29.0"
thiserror = "1.0.30"

[profile.dev]
# Rust iterators on zero optimizations? Hell naw.
opt-level = 1

[features]

[dev-dependencies]
maplit = "1.0.2"
